--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -2,107 +2,132 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "edb720fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Employee ID'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-785e15639cf3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     91\u001b[0m \u001b[0mmds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Global Career Band\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"MD\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmd_row\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mmds\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miterrows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 93\u001b[1;33m     \u001b[0mtrace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmd_row\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Employee ID\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmd_info\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmd_row\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_dict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     94\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     95\u001b[0m \u001b[1;31m# Step 7: Create final DataFrame\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-4-785e15639cf3>\u001b[0m in \u001b[0;36mtrace\u001b[1;34m(emp_id, md_info, gcb3_info, rm_info)\u001b[0m\n\u001b[0;32m     65\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m         \u001b[1;31m# Basic employee info\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 67\u001b[1;33m         \u001b[1;34m\"Employee ID\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0memp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Employee ID\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     68\u001b[0m         \u001b[1;34m\"Employee Name\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0memp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Employee Name\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m         \u001b[1;34m\"Employee Email\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0memp\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Employee Business Email Address\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Employee ID'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Sample data\n",
+    "# Step 1: Sample Data\n",
     "data = [\n",
-    "    [\"101\", \"Alice\",    \"5\", \"201\", \"Bob\",      \"alice@ex.com\"],\n",
-    "    [\"201\", \"Bob\",      \"4\", \"301\", \"Charlie\",  \"bob@ex.com\"],\n",
-    "    [\"301\", \"Charlie\",  \"3\", \"401\", \"Dana\",     \"charlie@ex.com\"],\n",
-    "    [\"401\", \"Dana\",     \"2\", None,  None,       \"dana@ex.com\"],\n",
-    "    [\"302\", \"Eva\",      \"5\", \"201\", \"Bob\",      \"eva@ex.com\"],\n",
-    "    [\"304\", \"Kirti\",    \"5\", \"305\", \"Inish\",    \"kirti@ex.com\"],\n",
-    "    [\"307\", \"Anshul\",   \"4\", \"305\", \"Inish\",    \"anshul@ex.com\"],\n",
-    "    [\"308\", \"Sowmya\",   \"5\", \"307\", \"Anshul\",   \"sowmya@ex.com\"],\n",
-    "    [\"305\", \"Inish\",    \"3\", \"306\", \"Vilma\",    \"inish@ex.com\"],\n",
-    "    [\"306\", \"Vilma\",    \"2\", \"504\", \"Abhishek\", \"vilma@ex.com\"],\n",
-    "    [\"504\", \"Abhishek\", \"1\", None,  None,       \"abhishek@ex.com\"],\n",
+    "    {\"Employee ID\": \"1001\", \"Employee Name\": \"Alice\", \"Global Career Band\": \"8\", \"Employee Business Email Address\": \"alice@corp.com\", \n",
+    "     \"Employee Type\": \"Full-Time\", \"Employee Status\": \"Active\", \"Legal Entity Name\": \"Corp Ltd\", \"Work Location City\": \"Mumbai\", \n",
+    "     \"Entity Manager Employee ID\": \"2001\", \"Entity Manager Employee Name\": \"Ethan\"},\n",
+    "\n",
+    "    {\"Employee ID\": \"2001\", \"Employee Name\": \"Ethan\", \"Global Career Band\": \"4\", \"Employee Business Email Address\": \"ethan@corp.com\", \n",
+    "     \"Employee Type\": \"Full-Time\", \"Employee Status\": \"Active\", \"Legal Entity Name\": \"Corp Ltd\", \"Work Location City\": \"Delhi\", \n",
+    "     \"Entity Manager Employee ID\": \"3001\", \"Entity Manager Employee Name\": \"Charlie\"},\n",
+    "\n",
+    "    {\"Employee ID\": \"3001\", \"Employee Name\": \"Charlie\", \"Global Career Band\": \"3\", \"Employee Business Email Address\": \"charlie@corp.com\", \n",
+    "     \"Employee Type\": \"Full-Time\", \"Employee Status\": \"Active\", \"Legal Entity Name\": \"Corp Ltd\", \"Work Location City\": \"Delhi\", \n",
+    "     \"Entity Manager Employee ID\": \"4001\", \"Entity Manager Employee Name\": \"Diana\"},\n",
+    "\n",
+    "    {\"Employee ID\": \"3002\", \"Employee Name\": \"Simran\", \"Global Career Band\": \"3\", \"Employee Business Email Address\": \"simran@corp.com\", \n",
+    "     \"Employee Type\": \"Full-Time\", \"Employee Status\": \"Active\", \"Legal Entity Name\": \"Corp Ltd\", \"Work Location City\": \"Delhi\", \n",
+    "     \"Entity Manager Employee ID\": \"3001\", \"Entity Manager Employee Name\": \"Charlie\"},\n",
+    "\n",
+    "    {\"Employee ID\": \"5001\", \"Employee Name\": \"Raj\", \"Global Career Band\": \"5\", \"Employee Business Email Address\": \"raj@corp.com\", \n",
+    "     \"Employee Type\": \"Full-Time\", \"Employee Status\": \"Active\", \"Legal Entity Name\": \"Corp Ltd\", \"Work Location City\": \"Bangalore\", \n",
+    "     \"Entity Manager Employee ID\": \"3002\", \"Entity Manager Employee Name\": \"Simran\"},\n",
+    "\n",
+    "    {\"Employee ID\": \"4001\", \"Employee Name\": \"Diana\", \"Global Career Band\": \"MD\", \"Employee Business Email Address\": \"diana@corp.com\", \n",
+    "     \"Employee Type\": \"Full-Time\", \"Employee Status\": \"Active\", \"Legal Entity Name\": \"Corp Ltd\", \"Work Location City\": \"Mumbai\", \n",
+    "     \"Entity Manager Employee ID\": None, \"Entity Manager Employee Name\": None}\n",
     "]\n",
     "\n",
-    "columns = [\n",
-    "    \"Employee ID\", \"Employee Name\", \"Global Career Band\",\n",
-    "    \"Manager Employee ID\", \"Manager Employee Name\", \"Employee Email\"\n",
-    "]\n",
+    "df = pd.DataFrame(data)\n",
     "\n",
-    "df = pd.DataFrame(data, columns=columns)\n",
+    "# Step 2: Create a dictionary for fast lookup\n",
+    "emp_dict = df.set_index(\"Employee ID\").to_dict(orient=\"index\")\n",
     "\n",
-    "# Create a lookup by Employee ID\n",
-    "emp_lookup = df.set_index(\"Employee ID\").to_dict(\"index\")\n",
+    "# Step 3: Define band hierarchy\n",
+    "band_order = {'MD': 0, '3': 1, '4': 2, '5': 3, '6': 4, '7': 5, '8': 6}\n",
+    "df[\"Band_Order\"] = df[\"Global Career Band\"].map(band_order)\n",
     "\n",
-    "# Function to trace up the hierarchy to MD and GCB3\n",
-    "def trace_hierarchy(emp_id):\n",
-    "    seen = set()\n",
-    "    md_id = md_name = md_email = \"\"\n",
-    "    gcb3_id = gcb3_name = gcb3_email = \"\"\n",
-    "    reporting_mgr_id = reporting_mgr_name = reporting_mgr_email = \"\"\n",
+    "# Step 4: Prepare result list\n",
+    "final_rows = []\n",
+    "visited = set()\n",
     "\n",
-    "    current_id = emp_id\n",
+    "# Step 5: Recursively trace down from MD → GCB3 → RM → Employees\n",
+    "def trace(emp_id, md_info=None, gcb3_info=None, rm_info=None):\n",
+    "    if emp_id in visited:\n",
+    "        return\n",
+    "    visited.add(emp_id)\n",
     "\n",
-    "    while current_id and current_id not in seen:\n",
-    "        seen.add(current_id)\n",
-    "        person = emp_lookup.get(current_id)\n",
-    "        if not person:\n",
-    "            break\n",
+    "    emp = emp_dict.get(emp_id)\n",
+    "    if emp is None:\n",
+    "        return\n",
     "\n",
-    "        gcb = str(person.get(\"Global Career Band\", \"\"))\n",
-    "        mgr_id = person.get(\"Manager Employee ID\")\n",
+    "    row = {\n",
+    "        \"MD_ID\": md_info[\"Employee ID\"] if md_info else \"\",\n",
+    "        \"MD_Name\": md_info[\"Employee Name\"] if md_info else \"\",\n",
+    "        \"MD_Email\": md_info[\"Employee Business Email Address\"] if md_info else \"\",\n",
     "\n",
-    "        if gcb == \"3\" and not gcb3_id:\n",
-    "            gcb3_id = current_id\n",
-    "            gcb3_name = person[\"Employee Name\"]\n",
-    "            gcb3_email = person[\"Employee Email\"]\n",
-    "        elif gcb == \"2\" and not md_id:\n",
-    "            md_id = current_id\n",
-    "            md_name = person[\"Employee Name\"]\n",
-    "            md_email = person[\"Employee Email\"]\n",
+    "        \"GCB3_ID\": gcb3_info[\"Employee ID\"] if gcb3_info else \"\",\n",
+    "        \"GCB3_Name\": gcb3_info[\"Employee Name\"] if gcb3_info else \"\",\n",
+    "        \"GCB3_Email\": gcb3_info[\"Employee Business Email Address\"] if gcb3_info else \"\",\n",
     "\n",
-    "        if mgr_id:\n",
-    "            mgr = emp_lookup.get(mgr_id)\n",
-    "            if mgr and not reporting_mgr_id:\n",
-    "                reporting_mgr_id = mgr_id\n",
-    "                reporting_mgr_name = mgr[\"Employee Name\"]\n",
-    "                reporting_mgr_email = mgr[\"Employee Email\"]\n",
+    "        \"ReportingManager_ID\": rm_info[\"Employee ID\"] if rm_info else \"\",\n",
+    "        \"ReportingManager_Name\": rm_info[\"Employee Name\"] if rm_info else \"\",\n",
+    "        \"ReportingManager_Email\": rm_info[\"Employee Business Email Address\"] if rm_info else \"\",\n",
     "\n",
-    "        current_id = mgr_id\n",
+    "        # Basic employee info\n",
+    "        \"Employee ID\": emp[\"Employee ID\"],\n",
+    "        \"Employee Name\": emp[\"Employee Name\"],\n",
+    "        \"Employee Email\": emp[\"Employee Business Email Address\"],\n",
+    "        \"Global Career Band\": emp[\"Global Career Band\"],\n",
+    "        \"Employee Type\": emp[\"Employee Type\"],\n",
+    "        \"Employee Status\": emp[\"Employee Status\"],\n",
+    "        \"Legal Entity Name\": emp[\"Legal Entity Name\"],\n",
+    "        \"Work Location City\": emp[\"Work Location City\"]\n",
+    "    }\n",
     "\n",
-    "    return pd.Series([\n",
-    "        md_id, md_name, md_email,\n",
-    "        gcb3_id, gcb3_name, gcb3_email,\n",
-    "        reporting_mgr_id, reporting_mgr_name, reporting_mgr_email\n",
-    "    ])\n",
+    "    final_rows.append(row)\n",
     "\n",
-    "# Apply the trace to each employee\n",
-    "df_hierarchy = df.copy()\n",
-    "df_hierarchy[[\n",
-    "    \"MD ID\", \"MD Name\", \"MD Email\",\n",
-    "    \"GCB3 ID\", \"GCB3 Name\", \"GCB3 Email\",\n",
-    "    \"Reporting Manager ID\", \"Reporting Manager Name\", \"Reporting Manager Email\"\n",
-    "]] = df_hierarchy[\"Employee ID\"].apply(trace_hierarchy)\n",
+    "    # Recurse for people who report to this person\n",
+    "    reports = df[df[\"Entity Manager Employee ID\"] == emp_id].sort_values(\"Band_Order\")\n",
+    "    for _, report in reports.iterrows():\n",
+    "        next_emp_id = report[\"Employee ID\"]\n",
+    "        band = report[\"Global Career Band\"]\n",
     "\n",
-    "# Optional: drop duplicates if employee data got expanded\n",
-    "df_hierarchy = df_hierarchy.drop_duplicates(subset=[\"Employee ID\"])\n",
+    "        if band == \"3\":\n",
+    "            trace(next_emp_id, md_info=md_info or emp, gcb3_info=report.to_dict(), rm_info=None)\n",
+    "        else:\n",
+    "            trace(next_emp_id, md_info=md_info, gcb3_info=gcb3_info, rm_info=emp)\n",
     "\n",
-    "# Rearranging columns as required\n",
-    "final_columns = [\n",
-    "    \"MD ID\", \"MD Name\", \"MD Email\",\n",
-    "    \"GCB3 ID\", \"GCB3 Name\", \"GCB3 Email\",\n",
-    "    \"Reporting Manager ID\", \"Reporting Manager Name\", \"Reporting Manager Email\",\n",
-    "    \"Employee ID\", \"Employee Name\", \"Employee Email\",\n",
-    "    \"Global Career Band\",  # can help with filtering\n",
-    "    # You can add more columns here if needed\n",
-    "]\n",
+    "# Step 6: Start with MDs\n",
+    "mds = df[df[\"Global Career Band\"] == \"MD\"]\n",
+    "for _, md_row in mds.iterrows():\n",
+    "    trace(md_row[\"Employee ID\"], md_info=md_row.to_dict())\n",
     "\n",
-    "final_df = df_hierarchy[final_columns]\n",
+    "# Step 7: Create final DataFrame\n",
+    "df_final = pd.DataFrame(final_rows)\n",
     "\n",
-    "# Save to Excel\n",
-    "final_df.to_excel(\"Task_One_Final_Output.xlsx\", index=False)\n",
-    "print(\"✅ Output saved to 'Task_One_Final_Output.xlsx'\")\n",
-    "\n"
+    "# Step 8: Find unlinked employees\n",
+    "linked_ids = set(df_final[\"Employee ID\"])\n",
+    "unlinked_df = df[~df[\"Employee ID\"].isin(linked_ids)]\n",
+    "\n",
+    "# Step 9: Save to Excel\n",
+    "with pd.ExcelWriter(\"Hierarchy_Output.xlsx\", engine=\"xlsxwriter\") as writer:\n",
+    "    df_final.to_excel(writer, index=False, sheet_name=\"Full_Hierarchy\")\n",
+    "    if not unlinked_df.empty:\n",
+    "        unlinked_df.to_excel(writer, index=False, sheet_name=\"Unlinked_Employees\")\n",
+    "\n",
+    "print(\"✅ Output saved to 'Hierarchy_Output.xlsx'\")\n"
    ]
   },
   {
