--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -22,112 +22,93 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Step 1: Sample Data\n",
-    "data = [\n",
-    "    {\"Employee ID\": \"1001\", \"Employee Name\": \"Alice\", \"Global Career Band\": \"8\", \"Employee Business Email Address\": \"alice@corp.com\", \n",
-    "     \"Employee Type\": \"Full-Time\", \"Employee Status\": \"Active\", \"Legal Entity Name\": \"Corp Ltd\", \"Work Location City\": \"Mumbai\", \n",
-    "     \"Entity Manager Employee ID\": \"2001\", \"Entity Manager Employee Name\": \"Ethan\"},\n",
+    "# Constants for column names\n",
+    "ID_COL = \"Employee ID\"\n",
+    "MANAGER_ID_COL = \"Entity Manager Employee ID\"\n",
+    "NAME_COL = \"Employee Name\"\n",
+    "EMAIL_COL = \"Employee Business Email Address\"\n",
+    "GCB_COL = \"Global Career Band\"\n",
     "\n",
-    "    {\"Employee ID\": \"2001\", \"Employee Name\": \"Ethan\", \"Global Career Band\": \"4\", \"Employee Business Email Address\": \"ethan@corp.com\", \n",
-    "     \"Employee Type\": \"Full-Time\", \"Employee Status\": \"Active\", \"Legal Entity Name\": \"Corp Ltd\", \"Work Location City\": \"Delhi\", \n",
-    "     \"Entity Manager Employee ID\": \"3001\", \"Entity Manager Employee Name\": \"Charlie\"},\n",
-    "\n",
-    "    {\"Employee ID\": \"3001\", \"Employee Name\": \"Charlie\", \"Global Career Band\": \"3\", \"Employee Business Email Address\": \"charlie@corp.com\", \n",
-    "     \"Employee Type\": \"Full-Time\", \"Employee Status\": \"Active\", \"Legal Entity Name\": \"Corp Ltd\", \"Work Location City\": \"Delhi\", \n",
-    "     \"Entity Manager Employee ID\": \"4001\", \"Entity Manager Employee Name\": \"Diana\"},\n",
-    "\n",
-    "    {\"Employee ID\": \"3002\", \"Employee Name\": \"Simran\", \"Global Career Band\": \"3\", \"Employee Business Email Address\": \"simran@corp.com\", \n",
-    "     \"Employee Type\": \"Full-Time\", \"Employee Status\": \"Active\", \"Legal Entity Name\": \"Corp Ltd\", \"Work Location City\": \"Delhi\", \n",
-    "     \"Entity Manager Employee ID\": \"3001\", \"Entity Manager Employee Name\": \"Charlie\"},\n",
-    "\n",
-    "    {\"Employee ID\": \"5001\", \"Employee Name\": \"Raj\", \"Global Career Band\": \"5\", \"Employee Business Email Address\": \"raj@corp.com\", \n",
-    "     \"Employee Type\": \"Full-Time\", \"Employee Status\": \"Active\", \"Legal Entity Name\": \"Corp Ltd\", \"Work Location City\": \"Bangalore\", \n",
-    "     \"Entity Manager Employee ID\": \"3002\", \"Entity Manager Employee Name\": \"Simran\"},\n",
-    "\n",
-    "    {\"Employee ID\": \"4001\", \"Employee Name\": \"Diana\", \"Global Career Band\": \"MD\", \"Employee Business Email Address\": \"diana@corp.com\", \n",
-    "     \"Employee Type\": \"Full-Time\", \"Employee Status\": \"Active\", \"Legal Entity Name\": \"Corp Ltd\", \"Work Location City\": \"Mumbai\", \n",
-    "     \"Entity Manager Employee ID\": None, \"Entity Manager Employee Name\": None}\n",
+    "# Columns to include in final output for employee info\n",
+    "EMPLOYEE_COLUMNS = [\n",
+    "    \"Employee ID\", \"Employee Name\", \"Employee Business Email Address\", \n",
+    "    \"Global Career Band\", \"Employee Type\", \"Employee Status\", \n",
+    "    \"Legal Entity Name\", \"Work Location City\"\n",
     "]\n",
     "\n",
-    "df = pd.DataFrame(data)\n",
+    "# Sorting priority for Global Career Bands (MD > 3 > 4 > ... > 8)\n",
+    "GCB_PRIORITY = {'MD': 1, '3': 2, '4': 3, '5': 4, '6': 5, '7': 6, '8': 7}\n",
     "\n",
-    "# Step 2: Create a dictionary for fast lookup\n",
-    "emp_dict = df.set_index(\"Employee ID\").to_dict(orient=\"index\")\n",
+    "def get_gcb_priority(gcb):\n",
+    "    return GCB_PRIORITY.get(str(gcb).strip(), 99)\n",
     "\n",
-    "# Step 3: Define band hierarchy\n",
-    "band_order = {'MD': 0, '3': 1, '4': 2, '5': 3, '6': 4, '7': 5, '8': 6}\n",
-    "df[\"Band_Order\"] = df[\"Global Career Band\"].map(band_order)\n",
+    "def build_reporting_hierarchy(df):\n",
+    "    # Clean up GCB column\n",
+    "    df[GCB_COL] = df[GCB_COL].astype(str).str.strip()\n",
     "\n",
-    "# Step 4: Prepare result list\n",
-    "final_rows = []\n",
-    "visited = set()\n",
+    "    # Sort by hierarchy\n",
+    "    df[\"GCB_Sort_Order\"] = df[GCB_COL].map(get_gcb_priority)\n",
+    "    df_sorted = df.sort_values(\"GCB_Sort_Order\")\n",
     "\n",
-    "# Step 5: Recursively trace down from MD → GCB3 → RM → Employees\n",
-    "def trace(emp_id, md_info=None, gcb3_info=None, rm_info=None):\n",
-    "    if emp_id in visited:\n",
-    "        return\n",
-    "    visited.add(emp_id)\n",
+    "    # Create a lookup for quick access\n",
+    "    emp_lookup = df_sorted.set_index(ID_COL).to_dict(\"index\")\n",
     "\n",
-    "    emp = emp_dict.get(emp_id)\n",
-    "    if emp is None:\n",
-    "        return\n",
+    "    records = []\n",
+    "    seen = set()\n",
     "\n",
-    "    row = {\n",
-    "        \"MD_ID\": md_info[\"Employee ID\"] if md_info else \"\",\n",
-    "        \"MD_Name\": md_info[\"Employee Name\"] if md_info else \"\",\n",
-    "        \"MD_Email\": md_info[\"Employee Business Email Address\"] if md_info else \"\",\n",
+    "    for emp_id, emp in emp_lookup.items():\n",
+    "        if emp_id in seen:\n",
+    "            continue\n",
     "\n",
-    "        \"GCB3_ID\": gcb3_info[\"Employee ID\"] if gcb3_info else \"\",\n",
-    "        \"GCB3_Name\": gcb3_info[\"Employee Name\"] if gcb3_info else \"\",\n",
-    "        \"GCB3_Email\": gcb3_info[\"Employee Business Email Address\"] if gcb3_info else \"\",\n",
+    "        row = {\n",
+    "            \"MD Employee ID\": \"\",\n",
+    "            \"MD Name\": \"\",\n",
+    "            \"MD Email\": \"\",\n",
+    "            \"GCB3 Employee ID\": \"\",\n",
+    "            \"GCB3 Name\": \"\",\n",
+    "            \"GCB3 Email\": \"\",\n",
+    "            \"Reporting Manager Employee ID\": \"\",\n",
+    "            \"Reporting Manager Name\": \"\",\n",
+    "            \"Reporting Manager Email\": \"\"\n",
+    "        }\n",
     "\n",
-    "        \"ReportingManager_ID\": rm_info[\"Employee ID\"] if rm_info else \"\",\n",
-    "        \"ReportingManager_Name\": rm_info[\"Employee Name\"] if rm_info else \"\",\n",
-    "        \"ReportingManager_Email\": rm_info[\"Employee Business Email Address\"] if rm_info else \"\",\n",
+    "        curr_id = emp.get(MANAGER_ID_COL)\n",
+    "        level_tracker = {}\n",
     "\n",
-    "        # Basic employee info\n",
-    "        \"Employee ID\": emp[\"Employee ID\"],\n",
-    "        \"Employee Name\": emp[\"Employee Name\"],\n",
-    "        \"Employee Email\": emp[\"Employee Business Email Address\"],\n",
-    "        \"Global Career Band\": emp[\"Global Career Band\"],\n",
-    "        \"Employee Type\": emp[\"Employee Type\"],\n",
-    "        \"Employee Status\": emp[\"Employee Status\"],\n",
-    "        \"Legal Entity Name\": emp[\"Legal Entity Name\"],\n",
-    "        \"Work Location City\": emp[\"Work Location City\"]\n",
-    "    }\n",
+    "        while curr_id and curr_id in emp_lookup:\n",
+    "            manager = emp_lookup[curr_id]\n",
+    "            gcb = manager[GCB_COL].strip()\n",
     "\n",
-    "    final_rows.append(row)\n",
+    "            if gcb == \"MD\" and not row[\"MD Employee ID\"]:\n",
+    "                row[\"MD Employee ID\"] = curr_id\n",
+    "                row[\"MD Name\"] = manager.get(NAME_COL, \"\")\n",
+    "                row[\"MD Email\"] = manager.get(EMAIL_COL, \"\")\n",
+    "                level_tracker[\"MD\"] = True\n",
     "\n",
-    "    # Recurse for people who report to this person\n",
-    "    reports = df[df[\"Entity Manager Employee ID\"] == emp_id].sort_values(\"Band_Order\")\n",
-    "    for _, report in reports.iterrows():\n",
-    "        next_emp_id = report[\"Employee ID\"]\n",
-    "        band = report[\"Global Career Band\"]\n",
+    "            elif gcb == \"3\" and not row[\"GCB3 Employee ID\"]:\n",
+    "                row[\"GCB3 Employee ID\"] = curr_id\n",
+    "                row[\"GCB3 Name\"] = manager.get(NAME_COL, \"\")\n",
+    "                row[\"GCB3 Email\"] = manager.get(EMAIL_COL, \"\")\n",
+    "                level_tracker[\"GCB3\"] = True\n",
     "\n",
-    "        if band == \"3\":\n",
-    "            trace(next_emp_id, md_info=md_info or emp, gcb3_info=report.to_dict(), rm_info=None)\n",
-    "        else:\n",
-    "            trace(next_emp_id, md_info=md_info, gcb3_info=gcb3_info, rm_info=emp)\n",
+    "            elif not row[\"Reporting Manager Employee ID\"]:\n",
+    "                row[\"Reporting Manager Employee ID\"] = curr_id\n",
+    "                row[\"Reporting Manager Name\"] = manager.get(NAME_COL, \"\")\n",
+    "                row[\"Reporting Manager Email\"] = manager.get(EMAIL_COL, \"\")\n",
     "\n",
-    "# Step 6: Start with MDs\n",
-    "mds = df[df[\"Global Career Band\"] == \"MD\"]\n",
-    "for _, md_row in mds.iterrows():\n",
-    "    trace(md_row[\"Employee ID\"], md_info=md_row.to_dict())\n",
+    "            curr_id = manager.get(MANAGER_ID_COL)\n",
     "\n",
-    "# Step 7: Create final DataFrame\n",
-    "df_final = pd.DataFrame(final_rows)\n",
+    "        # Add current employee’s own data\n",
+    "        for col in EMPLOYEE_COLUMNS:\n",
+    "            row[col] = emp.get(col, \"\")\n",
     "\n",
-    "# Step 8: Find unlinked employees\n",
-    "linked_ids = set(df_final[\"Employee ID\"])\n",
-    "unlinked_df = df[~df[\"Employee ID\"].isin(linked_ids)]\n",
+    "        records.append(row)\n",
+    "        seen.add(emp_id)\n",
     "\n",
-    "# Step 9: Save to Excel\n",
-    "with pd.ExcelWriter(\"Hierarchy_Output.xlsx\", engine=\"xlsxwriter\") as writer:\n",
-    "    df_final.to_excel(writer, index=False, sheet_name=\"Full_Hierarchy\")\n",
-    "    if not unlinked_df.empty:\n",
-    "        unlinked_df.to_excel(writer, index=False, sheet_name=\"Unlinked_Employees\")\n",
+    "    final_df = pd.DataFrame(records)\n",
     "\n",
-    "print(\"✅ Output saved to 'Hierarchy_Output.xlsx'\")\n"
+    "    # Optional: remove helper sort column if merging with original\n",
+    "    return final_df\n"
    ]
   },
   {
