--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -22,93 +22,87 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Constants for column names\n",
-    "ID_COL = \"Employee ID\"\n",
-    "MANAGER_ID_COL = \"Entity Manager Employee ID\"\n",
-    "NAME_COL = \"Employee Name\"\n",
-    "EMAIL_COL = \"Employee Business Email Address\"\n",
-    "GCB_COL = \"Global Career Band\"\n",
+    "# === STEP 1: Load and clean the source data ===\n",
+    "input_file = 'GHA.xlsx'\n",
+    "sheet_name = 'Headcount - Employee Detail'\n",
     "\n",
-    "# Columns to include in final output for employee info\n",
-    "EMPLOYEE_COLUMNS = [\n",
-    "    \"Employee ID\", \"Employee Name\", \"Employee Business Email Address\", \n",
-    "    \"Global Career Band\", \"Employee Type\", \"Employee Status\", \n",
-    "    \"Legal Entity Name\", \"Work Location City\"\n",
-    "]\n",
+    "df = pd.read_excel(input_file, sheet_name=sheet_name)\n",
+    "df.columns = df.columns.str.strip()  # clean column names\n",
     "\n",
-    "# Sorting priority for Global Career Bands (MD > 3 > 4 > ... > 8)\n",
-    "GCB_PRIORITY = {'MD': 1, '3': 2, '4': 3, '5': 4, '6': 5, '7': 6, '8': 7}\n",
+    "# === STEP 2: Filter only valid GCB grades ===\n",
+    "valid_grades = ['MD', 3, 4, 5, 6, 7, 8]\n",
+    "df = df[df['Global Career Band'].isin(valid_grades)]\n",
     "\n",
-    "def get_gcb_priority(gcb):\n",
-    "    return GCB_PRIORITY.get(str(gcb).strip(), 99)\n",
+    "# === STEP 3: Create a mapping of Employee ID to their full record for lookup ===\n",
+    "emp_dict = df.set_index('Employee ID').to_dict('index')\n",
     "\n",
-    "def build_reporting_hierarchy(df):\n",
-    "    # Clean up GCB column\n",
-    "    df[GCB_COL] = df[GCB_COL].astype(str).str.strip()\n",
+    "# === STEP 4: Function to trace hierarchy ===\n",
+    "output_rows = []\n",
     "\n",
-    "    # Sort by hierarchy\n",
-    "    df[\"GCB_Sort_Order\"] = df[GCB_COL].map(get_gcb_priority)\n",
-    "    df_sorted = df.sort_values(\"GCB_Sort_Order\")\n",
+    "def trace(emp_id, md=None, gcb3=None, reporting_mgr=None, visited=None):\n",
+    "    if visited is None:\n",
+    "        visited = set()\n",
+    "    if emp_id in visited:\n",
+    "        return\n",
+    "    visited.add(emp_id)\n",
     "\n",
-    "    # Create a lookup for quick access\n",
-    "    emp_lookup = df_sorted.set_index(ID_COL).to_dict(\"index\")\n",
+    "    emp = emp_dict.get(emp_id)\n",
+    "    if not emp:\n",
+    "        return\n",
     "\n",
-    "    records = []\n",
-    "    seen = set()\n",
+    "    gcb = emp['Global Career Band']\n",
     "\n",
-    "    for emp_id, emp in emp_lookup.items():\n",
-    "        if emp_id in seen:\n",
-    "            continue\n",
+    "    row = {\n",
+    "        # MD Columns\n",
+    "        'MD Employee ID': md['Employee ID'] if md else '',\n",
+    "        'MD Name': md['Employee Name'] if md else '',\n",
+    "        'MD Email': md.get('Employee Business Email Address', '') if md else '',\n",
     "\n",
-    "        row = {\n",
-    "            \"MD Employee ID\": \"\",\n",
-    "            \"MD Name\": \"\",\n",
-    "            \"MD Email\": \"\",\n",
-    "            \"GCB3 Employee ID\": \"\",\n",
-    "            \"GCB3 Name\": \"\",\n",
-    "            \"GCB3 Email\": \"\",\n",
-    "            \"Reporting Manager Employee ID\": \"\",\n",
-    "            \"Reporting Manager Name\": \"\",\n",
-    "            \"Reporting Manager Email\": \"\"\n",
-    "        }\n",
+    "        # GCB3 Columns\n",
+    "        'GCB3 Employee ID': gcb3['Employee ID'] if gcb3 else '',\n",
+    "        'GCB3 Name': gcb3['Employee Name'] if gcb3 else '',\n",
+    "        'GCB3 Email': gcb3.get('Employee Business Email Address', '') if gcb3 else '',\n",
     "\n",
-    "        curr_id = emp.get(MANAGER_ID_COL)\n",
-    "        level_tracker = {}\n",
+    "        # Reporting Manager Columns\n",
+    "        'Reporting Manager ID': reporting_mgr['Employee ID'] if reporting_mgr else '',\n",
+    "        'Reporting Manager Name': reporting_mgr['Employee Name'] if reporting_mgr else '',\n",
+    "        'Reporting Manager Email': reporting_mgr.get('Employee Business Email Address', '') if reporting_mgr else '',\n",
     "\n",
-    "        while curr_id and curr_id in emp_lookup:\n",
-    "            manager = emp_lookup[curr_id]\n",
-    "            gcb = manager[GCB_COL].strip()\n",
+    "        # Current Employee Columns\n",
+    "        'Employee ID': emp['Employee ID'],\n",
+    "        'Employee Name': emp['Employee Name'],\n",
+    "        'Global Career Band': gcb,\n",
+    "        'Employee Email': emp.get('Employee Business Email Address', ''),\n",
+    "        'Employee Type': emp.get('Employee Type', ''),\n",
+    "        'Employee Status': emp.get('Employee Status', ''),\n",
+    "        'Legal Entity Name': emp.get('Legal Entity Name', ''),\n",
+    "        'Work Location City': emp.get('Work Location City', ''),\n",
+    "    }\n",
     "\n",
-    "            if gcb == \"MD\" and not row[\"MD Employee ID\"]:\n",
-    "                row[\"MD Employee ID\"] = curr_id\n",
-    "                row[\"MD Name\"] = manager.get(NAME_COL, \"\")\n",
-    "                row[\"MD Email\"] = manager.get(EMAIL_COL, \"\")\n",
-    "                level_tracker[\"MD\"] = True\n",
+    "    output_rows.append(row)\n",
     "\n",
-    "            elif gcb == \"3\" and not row[\"GCB3 Employee ID\"]:\n",
-    "                row[\"GCB3 Employee ID\"] = curr_id\n",
-    "                row[\"GCB3 Name\"] = manager.get(NAME_COL, \"\")\n",
-    "                row[\"GCB3 Email\"] = manager.get(EMAIL_COL, \"\")\n",
-    "                level_tracker[\"GCB3\"] = True\n",
+    "    # Recurse on subordinates\n",
+    "    sub_df = df[df['Entity Manager Employee ID'] == emp_id]\n",
+    "    for _, sub in sub_df.iterrows():\n",
+    "        sub_id = sub['Employee ID']\n",
+    "        sub_gcb = sub['Global Career Band']\n",
     "\n",
-    "            elif not row[\"Reporting Manager Employee ID\"]:\n",
-    "                row[\"Reporting Manager Employee ID\"] = curr_id\n",
-    "                row[\"Reporting Manager Name\"] = manager.get(NAME_COL, \"\")\n",
-    "                row[\"Reporting Manager Email\"] = manager.get(EMAIL_COL, \"\")\n",
+    "        if gcb == 'MD':\n",
+    "            trace(sub_id, md=emp, visited=visited)\n",
+    "        elif gcb == 3:\n",
+    "            trace(sub_id, md=md, gcb3=emp, visited=visited)\n",
+    "        elif gcb in [4, 5, 6, 7, 8]:\n",
+    "            trace(sub_id, md=md, gcb3=gcb3, reporting_mgr=emp, visited=visited)\n",
     "\n",
-    "            curr_id = manager.get(MANAGER_ID_COL)\n",
+    "# === STEP 5: Start from all MDs and build the hierarchy ===\n",
+    "md_df = df[df['Global Career Band'] == 'MD']\n",
+    "for _, md_row in md_df.iterrows():\n",
+    "    trace(md_row['Employee ID'])\n",
     "\n",
-    "        # Add current employee’s own data\n",
-    "        for col in EMPLOYEE_COLUMNS:\n",
-    "            row[col] = emp.get(col, \"\")\n",
-    "\n",
-    "        records.append(row)\n",
-    "        seen.add(emp_id)\n",
-    "\n",
-    "    final_df = pd.DataFrame(records)\n",
-    "\n",
-    "    # Optional: remove helper sort column if merging with original\n",
-    "    return final_df\n"
+    "# === STEP 6: Save output ===\n",
+    "final_df = pd.DataFrame(output_rows)\n",
+    "final_df.to_excel(\"Task_One_Hierarchy_Output.xlsx\", index=False)\n",
+    "print(\"✅ Hierarchy output saved to 'Task_One_Hierarchy_Output.xlsx'\")\n"
    ]
   },
   {
