--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -22,87 +22,100 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# === STEP 1: Load and clean the source data ===\n",
-    "input_file = 'GHA.xlsx'\n",
+    "# File and sheet info\n",
+    "file_path = 'GHA.xlsx'\n",
     "sheet_name = 'Headcount - Employee Detail'\n",
     "\n",
-    "df = pd.read_excel(input_file, sheet_name=sheet_name)\n",
-    "df.columns = df.columns.str.strip()  # clean column names\n",
+    "# Required columns\n",
+    "cols_to_keep = [\n",
+    "    \"Employee ID\", \"Employee Name\", \"Employee Business Email Address\", \n",
+    "    \"Global Career Band\", \"Employee Type\", \"Employee Status\", \n",
+    "    \"Legal Entity Name\", \"Work Location City\",\n",
+    "    \"Entity Manager Employee ID\", \"Entity Manager Employee Name\",\n",
+    "    \"Functional Manager Employee ID\", \"Functional Manager Employee Name\"\n",
+    "]\n",
     "\n",
-    "# === STEP 2: Filter only valid GCB grades ===\n",
-    "valid_grades = ['MD', 3, 4, 5, 6, 7, 8]\n",
-    "df = df[df['Global Career Band'].isin(valid_grades)]\n",
+    "# Read file\n",
+    "df = pd.read_excel(file_path, sheet_name=sheet_name, dtype=str)\n",
+    "df = df[cols_to_keep].dropna(subset=[\"Employee ID\"])  # Clean base\n",
     "\n",
-    "# === STEP 3: Create a mapping of Employee ID to their full record for lookup ===\n",
-    "emp_dict = df.set_index('Employee ID').to_dict('index')\n",
+    "# Standardize\n",
+    "df[\"Global Career Band\"] = df[\"Global Career Band\"].str.strip().str.upper()\n",
+    "gcb_order = {'MD': 1, '3': 2, '4': 3, '5': 4, '6': 5, '7': 6, '8': 7}\n",
+    "df[\"GCB_Order\"] = df[\"Global Career Band\"].map(gcb_order)\n",
     "\n",
-    "# === STEP 4: Function to trace hierarchy ===\n",
-    "output_rows = []\n",
+    "# Prepare lookup dict\n",
+    "emp_dict = df.set_index(\"Employee ID\").to_dict(\"index\")\n",
     "\n",
-    "def trace(emp_id, md=None, gcb3=None, reporting_mgr=None, visited=None):\n",
-    "    if visited is None:\n",
-    "        visited = set()\n",
-    "    if emp_id in visited:\n",
+    "# Final records\n",
+    "final_rows = []\n",
+    "\n",
+    "# To track already added IDs\n",
+    "added_ids = set()\n",
+    "\n",
+    "def build_hierarchy(emp_id, md_info=None, gcb3_info=None, reporting_mgr_info=None):\n",
+    "    if emp_id in added_ids:\n",
     "        return\n",
-    "    visited.add(emp_id)\n",
-    "\n",
     "    emp = emp_dict.get(emp_id)\n",
     "    if not emp:\n",
     "        return\n",
     "\n",
-    "    gcb = emp['Global Career Band']\n",
-    "\n",
+    "    # Build record\n",
     "    row = {\n",
-    "        # MD Columns\n",
-    "        'MD Employee ID': md['Employee ID'] if md else '',\n",
-    "        'MD Name': md['Employee Name'] if md else '',\n",
-    "        'MD Email': md.get('Employee Business Email Address', '') if md else '',\n",
+    "        \"MD ID\": md_info[\"Employee ID\"] if md_info else \"\",\n",
+    "        \"MD Name\": md_info[\"Employee Name\"] if md_info else \"\",\n",
+    "        \"MD Email\": md_info[\"Employee Business Email Address\"] if md_info else \"\",\n",
     "\n",
-    "        # GCB3 Columns\n",
-    "        'GCB3 Employee ID': gcb3['Employee ID'] if gcb3 else '',\n",
-    "        'GCB3 Name': gcb3['Employee Name'] if gcb3 else '',\n",
-    "        'GCB3 Email': gcb3.get('Employee Business Email Address', '') if gcb3 else '',\n",
+    "        \"GCB3 ID\": gcb3_info[\"Employee ID\"] if gcb3_info else \"\",\n",
+    "        \"GCB3 Name\": gcb3_info[\"Employee Name\"] if gcb3_info else \"\",\n",
+    "        \"GCB3 Email\": gcb3_info[\"Employee Business Email Address\"] if gcb3_info else \"\",\n",
     "\n",
-    "        # Reporting Manager Columns\n",
-    "        'Reporting Manager ID': reporting_mgr['Employee ID'] if reporting_mgr else '',\n",
-    "        'Reporting Manager Name': reporting_mgr['Employee Name'] if reporting_mgr else '',\n",
-    "        'Reporting Manager Email': reporting_mgr.get('Employee Business Email Address', '') if reporting_mgr else '',\n",
-    "\n",
-    "        # Current Employee Columns\n",
-    "        'Employee ID': emp['Employee ID'],\n",
-    "        'Employee Name': emp['Employee Name'],\n",
-    "        'Global Career Band': gcb,\n",
-    "        'Employee Email': emp.get('Employee Business Email Address', ''),\n",
-    "        'Employee Type': emp.get('Employee Type', ''),\n",
-    "        'Employee Status': emp.get('Employee Status', ''),\n",
-    "        'Legal Entity Name': emp.get('Legal Entity Name', ''),\n",
-    "        'Work Location City': emp.get('Work Location City', ''),\n",
+    "        \"Reporting Manager ID\": reporting_mgr_info[\"Employee ID\"] if reporting_mgr_info else \"\",\n",
+    "        \"Reporting Manager Name\": reporting_mgr_info[\"Employee Name\"] if reporting_mgr_info else \"\",\n",
+    "        \"Reporting Manager Email\": reporting_mgr_info[\"Employee Business Email Address\"] if reporting_mgr_info else \"\",\n",
     "    }\n",
     "\n",
-    "    output_rows.append(row)\n",
+    "    # Add employee basic info\n",
+    "    for col in cols_to_keep:\n",
+    "        row[col] = emp.get(col, \"\")\n",
     "\n",
-    "    # Recurse on subordinates\n",
-    "    sub_df = df[df['Entity Manager Employee ID'] == emp_id]\n",
-    "    for _, sub in sub_df.iterrows():\n",
-    "        sub_id = sub['Employee ID']\n",
-    "        sub_gcb = sub['Global Career Band']\n",
+    "    final_rows.append(row)\n",
+    "    added_ids.add(emp_id)\n",
     "\n",
-    "        if gcb == 'MD':\n",
-    "            trace(sub_id, md=emp, visited=visited)\n",
-    "        elif gcb == 3:\n",
-    "            trace(sub_id, md=md, gcb3=emp, visited=visited)\n",
-    "        elif gcb in [4, 5, 6, 7, 8]:\n",
-    "            trace(sub_id, md=md, gcb3=gcb3, reporting_mgr=emp, visited=visited)\n",
+    "    # Recursively build under this employee\n",
+    "    subordinates = df[df[\"Entity Manager Employee ID\"] == emp_id][\"Employee ID\"].tolist()\n",
+    "    for sub_id in subordinates:\n",
+    "        sub = emp_dict.get(sub_id)\n",
+    "        if not sub:\n",
+    "            continue\n",
+    "        sub_gcb = sub.get(\"Global Career Band\", \"\")\n",
     "\n",
-    "# === STEP 5: Start from all MDs and build the hierarchy ===\n",
-    "md_df = df[df['Global Career Band'] == 'MD']\n",
-    "for _, md_row in md_df.iterrows():\n",
-    "    trace(md_row['Employee ID'])\n",
+    "        if sub_gcb == \"3\":\n",
+    "            build_hierarchy(sub_id, md_info=md_info or emp, gcb3_info=sub)\n",
+    "        else:\n",
+    "            build_hierarchy(sub_id, md_info=md_info, gcb3_info=gcb3_info, reporting_mgr_info=emp)\n",
     "\n",
-    "# === STEP 6: Save output ===\n",
-    "final_df = pd.DataFrame(output_rows)\n",
-    "final_df.to_excel(\"Task_One_Hierarchy_Output.xlsx\", index=False)\n",
-    "print(\"✅ Hierarchy output saved to 'Task_One_Hierarchy_Output.xlsx'\")\n"
+    "# Start from MDs\n",
+    "mds = df[df[\"Global Career Band\"] == \"MD\"]\n",
+    "for _, md in mds.iterrows():\n",
+    "    md_id = md[\"Employee ID\"]\n",
+    "    build_hierarchy(md_id, md_info=md)\n",
+    "\n",
+    "# Collect any orphan records not linked in the hierarchy\n",
+    "remaining_ids = set(emp_dict.keys()) - added_ids\n",
+    "orphan_rows = [emp_dict[eid] for eid in remaining_ids]\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "hierarchy_df = pd.DataFrame(final_rows)\n",
+    "\n",
+    "# Orphans\n",
+    "orphan_df = pd.DataFrame(orphan_rows)\n",
+    "\n",
+    "# Save to Excel\n",
+    "with pd.ExcelWriter(\"TaskOne_Hierarchy_Report.xlsx\", engine=\"xlsxwriter\") as writer:\n",
+    "    hierarchy_df.to_excel(writer, index=False, sheet_name=\"Hierarchy\")\n",
+    "    if not orphan_df.empty:\n",
+    "        orphan_df.to_excel(writer, index=False, sheet_name=\"Orphans\")\n"
    ]
   },
   {
