--- a/MasterFile.ipynb
+++ b/MasterFile.ipynb
@@ -22,100 +22,101 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# File and sheet info\n",
-    "file_path = 'GHA.xlsx'\n",
-    "sheet_name = 'Headcount - Employee Detail'\n",
+    "# === Step 1: Load and clean data ===\n",
+    "file_path = \"GHA.xlsx\"\n",
+    "sheet_name = \"Headcount - Employee Detail\"\n",
+    "df = pd.read_excel(file_path, sheet_name=sheet_name)\n",
     "\n",
-    "# Required columns\n",
-    "cols_to_keep = [\n",
-    "    \"Employee ID\", \"Employee Name\", \"Employee Business Email Address\", \n",
-    "    \"Global Career Band\", \"Employee Type\", \"Employee Status\", \n",
+    "# Columns to include in final report\n",
+    "cols_to_include = [\n",
+    "    \"Employee ID\", \"Employee Name\", \"Employee Business Email Address\",\n",
+    "    \"Global Career Band\", \"Employee Type\", \"Employee Status\",\n",
     "    \"Legal Entity Name\", \"Work Location City\",\n",
     "    \"Entity Manager Employee ID\", \"Entity Manager Employee Name\",\n",
     "    \"Functional Manager Employee ID\", \"Functional Manager Employee Name\"\n",
     "]\n",
     "\n",
-    "# Read file\n",
-    "df = pd.read_excel(file_path, sheet_name=sheet_name, dtype=str)\n",
-    "df = df[cols_to_keep].dropna(subset=[\"Employee ID\"])  # Clean base\n",
+    "# Keep only the necessary columns\n",
+    "df = df[cols_to_include].copy()\n",
     "\n",
-    "# Standardize\n",
-    "df[\"Global Career Band\"] = df[\"Global Career Band\"].str.strip().str.upper()\n",
-    "gcb_order = {'MD': 1, '3': 2, '4': 3, '5': 4, '6': 5, '7': 6, '8': 7}\n",
-    "df[\"GCB_Order\"] = df[\"Global Career Band\"].map(gcb_order)\n",
+    "# Define grade sorting order\n",
+    "grade_order = {'MD': 0, '3': 1, '4': 2, '5': 3, '6': 4, '7': 5, '8': 6}\n",
+    "df['Grade_Sort'] = df['Global Career Band'].map(grade_order)\n",
+    "df = df.sort_values(by='Grade_Sort').reset_index(drop=True)\n",
     "\n",
-    "# Prepare lookup dict\n",
+    "# Create employee lookup dictionary\n",
     "emp_dict = df.set_index(\"Employee ID\").to_dict(\"index\")\n",
     "\n",
-    "# Final records\n",
-    "final_rows = []\n",
+    "# Helper to convert Series to dict if needed\n",
+    "def ensure_dict(x):\n",
+    "    return x.to_dict() if hasattr(x, \"to_dict\") else x\n",
     "\n",
-    "# To track already added IDs\n",
-    "added_ids = set()\n",
+    "# === Step 2: Build hierarchy recursively ===\n",
+    "final_records = []\n",
     "\n",
     "def build_hierarchy(emp_id, md_info=None, gcb3_info=None, reporting_mgr_info=None):\n",
-    "    if emp_id in added_ids:\n",
-    "        return\n",
     "    emp = emp_dict.get(emp_id)\n",
     "    if not emp:\n",
     "        return\n",
     "\n",
-    "    # Build record\n",
-    "    row = {\n",
+    "    emp_gcb = str(emp.get(\"Global Career Band\", \"\")).strip()\n",
+    "\n",
+    "    record = {\n",
+    "        # MD info block\n",
     "        \"MD ID\": md_info[\"Employee ID\"] if md_info else \"\",\n",
     "        \"MD Name\": md_info[\"Employee Name\"] if md_info else \"\",\n",
     "        \"MD Email\": md_info[\"Employee Business Email Address\"] if md_info else \"\",\n",
     "\n",
+    "        # GCB3 info block\n",
     "        \"GCB3 ID\": gcb3_info[\"Employee ID\"] if gcb3_info else \"\",\n",
     "        \"GCB3 Name\": gcb3_info[\"Employee Name\"] if gcb3_info else \"\",\n",
     "        \"GCB3 Email\": gcb3_info[\"Employee Business Email Address\"] if gcb3_info else \"\",\n",
     "\n",
+    "        # Reporting Manager info block (GCB4 or GCB3-as-Manager)\n",
     "        \"Reporting Manager ID\": reporting_mgr_info[\"Employee ID\"] if reporting_mgr_info else \"\",\n",
     "        \"Reporting Manager Name\": reporting_mgr_info[\"Employee Name\"] if reporting_mgr_info else \"\",\n",
     "        \"Reporting Manager Email\": reporting_mgr_info[\"Employee Business Email Address\"] if reporting_mgr_info else \"\",\n",
     "    }\n",
     "\n",
-    "    # Add employee basic info\n",
-    "    for col in cols_to_keep:\n",
-    "        row[col] = emp.get(col, \"\")\n",
+    "    # Add employee's own data\n",
+    "    for col in cols_to_include:\n",
+    "        record[col] = emp.get(col, \"\")\n",
     "\n",
-    "    final_rows.append(row)\n",
-    "    added_ids.add(emp_id)\n",
+    "    final_records.append(record)\n",
     "\n",
-    "    # Recursively build under this employee\n",
-    "    subordinates = df[df[\"Entity Manager Employee ID\"] == emp_id][\"Employee ID\"].tolist()\n",
-    "    for sub_id in subordinates:\n",
-    "        sub = emp_dict.get(sub_id)\n",
-    "        if not sub:\n",
-    "            continue\n",
-    "        sub_gcb = sub.get(\"Global Career Band\", \"\")\n",
+    "    # Now recurse into subordinates\n",
+    "    subordinates = df[df[\"Entity Manager Employee ID\"] == emp_id]\n",
+    "    for _, sub in subordinates.iterrows():\n",
+    "        sub_id = sub[\"Employee ID\"]\n",
+    "        sub_gcb = str(sub[\"Global Career Band\"]).strip()\n",
     "\n",
     "        if sub_gcb == \"3\":\n",
-    "            build_hierarchy(sub_id, md_info=md_info or emp, gcb3_info=sub)\n",
+    "            build_hierarchy(\n",
+    "                sub_id,\n",
+    "                md_info=ensure_dict(md_info) or ensure_dict(emp),\n",
+    "                gcb3_info=ensure_dict(sub)\n",
+    "            )\n",
     "        else:\n",
-    "            build_hierarchy(sub_id, md_info=md_info, gcb3_info=gcb3_info, reporting_mgr_info=emp)\n",
+    "            build_hierarchy(\n",
+    "                sub_id,\n",
+    "                md_info=ensure_dict(md_info),\n",
+    "                gcb3_info=ensure_dict(gcb3_info),\n",
+    "                reporting_mgr_info=ensure_dict(emp)\n",
+    "            )\n",
     "\n",
-    "# Start from MDs\n",
+    "# === Step 3: Start building from MDs ===\n",
     "mds = df[df[\"Global Career Band\"] == \"MD\"]\n",
     "for _, md in mds.iterrows():\n",
     "    md_id = md[\"Employee ID\"]\n",
-    "    build_hierarchy(md_id, md_info=md)\n",
+    "    build_hierarchy(md_id, md_info=md.to_dict())\n",
     "\n",
-    "# Collect any orphan records not linked in the hierarchy\n",
-    "remaining_ids = set(emp_dict.keys()) - added_ids\n",
-    "orphan_rows = [emp_dict[eid] for eid in remaining_ids]\n",
-    "\n",
-    "# Convert to DataFrame\n",
-    "hierarchy_df = pd.DataFrame(final_rows)\n",
-    "\n",
-    "# Orphans\n",
-    "orphan_df = pd.DataFrame(orphan_rows)\n",
+    "# === Step 4: Write final output ===\n",
+    "final_df = pd.DataFrame(final_records)\n",
     "\n",
     "# Save to Excel\n",
-    "with pd.ExcelWriter(\"TaskOne_Hierarchy_Report.xlsx\", engine=\"xlsxwriter\") as writer:\n",
-    "    hierarchy_df.to_excel(writer, index=False, sheet_name=\"Hierarchy\")\n",
-    "    if not orphan_df.empty:\n",
-    "        orphan_df.to_excel(writer, index=False, sheet_name=\"Orphans\")\n"
+    "output_file = \"TaskOne_Hierarchy_Report.xlsx\"\n",
+    "final_df.to_excel(output_file, index=False)\n",
+    "print(f\"Report generated and saved as: {output_file}\")\n"
    ]
   },
   {
